--- a/index.html
+++ b/index.html
@@ -8,10 +8,12 @@
 		<link rel="stylesheet" type="text/css" href="css/grid.css">
 		<link rel="stylesheet" type="text/css" href="css/reset.css">
 		<link rel="stylesheet" type="text/css" href="css/style.css">
+		<title>Cindy Liu : ARTS 486 Web Journal</title>
 	</head>
 
 	<body>
-		
+		<h1>Cindy Liu<h1>
+		<p>This is my ARTS 486 web journal.</p>
 	</body>
 
 </html>
