--- a/index.html
+++ b/index.html
@@ -3,26 +3,99 @@
 <!DOCTYPE html>
 <html>
 	<head>
+
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js" integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+		<!-- scripts -->
 		<script src="js/main.js"></script>
+		<!-- styles -->
 		<link rel="stylesheet" type="text/css" href="css/grid.css">
 		<link rel="stylesheet" type="text/css" href="css/reset.css">
 		<link rel="stylesheet" type="text/css" href="css/style.css">
+		<!-- SEO -->
+		<meta name="description" content="this is my web journal">
+		<meta name="author" content="Cindy Liu">
+		<meta name="viewpoint" content="width=device-width, initial-scale=1.0">
+		<!--  Bookmark Icon-->
+		<link rel="icon" type="image/png" href="images/icon.png">
+		<!-- load google fonts -->
+		<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
 		<title>Cindy Liu : ARTS 486 Web Journal</title>
 	</head>
 
-	<body  
-		<h1 id="site-title">Cindy Liu</h1>
-		<p>This is my ARTS 486 web journal.</p>
-		<p>This is my second edit. <a href="https://mliu88.myportfolio.com/work" target="blank">This is a link.</a></p>
+	<body> 
+		<div id="wrapper">
+			<div id="masthead" class="grid">
+				<div id="topnav" class="width-12-12 width-12-12-m">	
+					<ul>
+						<li>
+							<div id="logo"> 
+								<a href="index.html" title="Cindy Liu"> 
+					<img title="cindy" src="images/sunflower.png" width="72" height="72" />
+	          			<h1> Cindy Liu</h1> 
 
-		<p>
-			<img src="images/sunflower.jpg" title="sunflower" />
-		</p>
+	        			</a>
+      			</div>
+						</li>
+						<li><a href="about.html">About Me</a></li>
+					</ul>
+				</div>
+			</div>
 
-	<!-- This is a comment -->
-		<h1 class="tiny">Cindy Liu agian</h1>
-		
+			<div id="main" class="grid">
+	<div id="intro" class="width-12-12-m width-12-12">
+		<img src="images/quack-quack-dance.gif" />
+		 <div id="intro-holder">
+	          <h5 id="intro-header">Hi. Every adventure requires a first step.</h5>
+	        </div>
+	      </div>
+
+	      <div id="work" class="width-12-12-m width-12-12">
+	      	  <h3>Course Work</h3>
+	      	  <div id="work-holder" class="grid">
+	          <div class="width-12-12-m width-4-12 work-item">
+	            <a class="inner" href="portfolio-single.html" title="Project Title">
+	              <img title="sunflower" src="images/sunflower.jpg" />
+	              <div class="work-inside">
+	                <h2>Project Title</h2>
+	                <p> <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Fira+Sans+Condensed:wght@200&display=swap" rel="stylesheet">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras interdum posuere nisi.</p>
+	              </div>
+	            </a>
+	          </div>
+
+	          <div class="width-12-12-m width-4-12 work-item">
+	            <a class="inner" href="portfolio-single.html" title="Project Title">
+	              <img title="Project Title" src="images/sunflower.jpg" />
+	              <div class="work-inside">
+	                <h2>Project Title</h2>
+	                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras interdum posuere nisi.</p>
+	              </div>
+	            </a>
+	          </div>
+
+	          <div class="width-12-12-m width-4-12 work-item">
+	            <a class="inner" href="portfolio-single.html" title="Project Title">
+	              <img title="Project Title" src="images/sunflower.jpg" />
+	              <div class="work-inside">
+	                <h2>Project Title</h2>
+	                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras interdum posuere nisi.</p>
+	              </div>
+	            </a>
+	          </div>
+
+	           <div>
+	      </div>
+    	</div>
+			<div id="footer" class="grid">
+	      <div class="width-12-12-m width-12-12">
+	        <p id="footer">Copyright ©2022 · Cindy M. Liu</p>
+	      </div>
+    </div>
+		</div>
+
 
 	</body>
 
