--- a/About.html
+++ b/About.html
@@ -39,17 +39,17 @@
 					</ul>
 				</div>
 			</div>
-
+			
 				<div id="main" class="grid">
 
 	      <div id="page" class="width-12-12-m width-12-12">
-<div class="tenor-gif-embed" data-postid="21248793" data-share-method="host" data-aspect-ratio="0.825" data-width="100%"><a href="https://tenor.com/view/quack-quack-dance-gif-21248793">Quack Quack Dance Sticker</a>from <a href="https://tenor.com/search/quack-stickers">Quack Stickers</a></div> <script type="text/javascript" async src="https://tenor.com/embed.js"></script>
+
 	        <div id="page-holder" class="grid">
 
 	          <div class="width-12-12-m width-12-12 page-item">
 
 	            <h3><a href="">About Me</a></h3>
-	            <p class="sides">Cras ac gravida neque. Nam euismod suscipit purus. Ut tortor mi, interdum eu vehicula at, congue non augue. Nulla facilisi. Fusce varius risus ut efficitur ornare. Sed non metus et ipsum scelerisque condimentum. Proin volutpat odio ipsum, sed luctus elit bibendum sed.<p>
+	            <p class="sides">Cras ac gravida neque. Nam euismod suscipit purus. Ut tortor mi, interdum eu vehicula at, congue non augue. Nulla facilisi. Fusce varius risus ut efficitur ornare. Sed non metus et ipsum scelerisque condimentum. Proin volutpat odio ipsum, sed luctus elit bibendum sed.</p>
 
 	           <p class="sides">Donec nec massa ullamcorper, faucibus nibh et, blandit erat. Nunc risus justo, fringilla nec dictum eu, laoreet vel mi. Aenean pretium sit amet est sed fringilla. Curabitur non ante molestie, commodo odio nec, tempus nulla. Fusce scelerisque neque dignissim magna molestie dictum. Nam ac enim at neque aliquam ullamcorper. Aliquam erat volutpat. Vestibulum vehicula quis nibh sed faucibus. Vestibulum felis neque, hendrerit quis semper id, porta vitae nisi. Donec velit metus, lacinia vitae viverra eu, ultrices non neque.</p>
 
