--- a/index.html
+++ b/index.html
@@ -38,14 +38,13 @@
 	        			</a>
       			</div>
 						</li>
-						<li><a href="about.html">About Me</a></li>
+						<li><a href="about.html">About Me</a></li> 
 					</ul>
 				</div>
 			</div>
 
 			<div id="main" class="grid">
 	<div id="intro" class="width-12-12-m width-12-12">
-		<img src="images/quack-quack-dance.gif" />
 		 <div id="intro-holder">
 	          <h5 id="intro-header">Hi. Every adventure requires a first step.</h5>
 	        </div>
@@ -55,13 +54,13 @@
 	      	  <h3>Course Work</h3>
 	      	  <div id="work-holder" class="grid">
 	          <div class="width-12-12-m width-4-12 work-item">
-	            <a class="inner" href="portfolio-single.html" title="Project Title">
+	            <a class="inner" href="portfolio-single.html" title="Project brief">
 	              <img title="sunflower" src="images/sunflower.jpg" />
 	              <div class="work-inside">
-	                <h2>Project Title</h2>
+	                <a href="project brief.html">project brief</a>
 	                <p> <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Fira+Sans+Condensed:wght@200&display=swap" rel="stylesheet">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras interdum posuere nisi.</p>
+<link href="https://fonts.googleapis.com/css2?family=Fira+Sans+Condensed:wght@200&display=swap" rel="stylesheet">Project proposal</p>
 	              </div>
 	            </a>
 	          </div>
