--- a/project brief.html
+++ b/project brief.html
@@ -48,9 +48,11 @@
 
 	          <div class="width-12-12-m width-12-12 page-item">
 
-	            <h3><a href="">Proposal Brief: The world is your fishbowl: A game about the life of sea turtles</a></h3>
+	            <h3><a href="">Proposal Brief: The world is your fishbowl: A game about the life of a sea turtle</a>
 
-	            <p class="sides">Research:</p>
+	            <p class="sides">Research:</p><link rel="preconnect" href="https://fonts.googleapis.com">
+					<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+					<link href="https://fonts.googleapis.com/css2?family=Fira+Sans+Condensed:wght@200&display=swap" rel="stylesheet">
 	           
 	            <p class="sides">There are currently seven known different types of sea turtles: Leatherback sea turtles, Green sea turtles, Hawksbill sea turtles, Loggerhead sea turtles, Olive Ridley sea turtles, Kemp’s Ridley sea turtles, and Flatback sea turtles.<p>
 
@@ -58,13 +60,13 @@
 
 				<p class="sides">Being a sea turtle has lots of setbacks. There are natural environmental factors that will obscure their life. Like every species, sea turtles are susceptible to fungal diseases and can harm the eggs further endangering their own species. Based on the recent reports on hatch failures of the seven known types of sea turtles, two pathogenic species of fungi from the Fusarium solani species complex have been identified. These species cause sea turtle egg fusariosis which kills the embryos. (Gleason, Frank H et al. “Newly emerging diseases of marine turtles”)</p>
 
-	           <p class="sides">Man Made environmental factors: vehicles</p>
+	           <p class="sides">Man Made environmental factors: vehicles:</p>
 				<p class="sides">Another factor to consider is the man made environmental factor. For instance since female sea turtles build a nest and lay their eggs. When cars drive onto the sand and mess with the next, creating a bigger ditch than what baby sea turtles can handle, the babies will be stuck and end up dying when they hatch.</p>
 
 	           <p class="sides">Man-Made environmental factors: tourism and development:</p>
 				<p class="sides">Due to the rapid development of cities, many animals lose their habitats. The coast is a sea turtle’s habitat and because of tourism, hotels, restaurants and other infrastructures are constructed which obstructs the livelihood of the sea turtles. One obstruction is the synthetic light that is created by these infrastructures. Baby sea turtles use the light from the horizon as a guide to the ocean. However, the lights created by humans obstruct their sense of direction.</p>
 
-				<p class="sides">Man Made environmental factors: pollution:</p>
+				<p class="sides">Man-made environmental factors: pollution:</p>
 
 				<p class="sides">Tons of waste (like plastic) gets dumped into the ocean every year. Part of a sea turtle’s diet includes jellyfish and sea turtles often confuse the two. So they eat the plastic thinking it’s a jellyfish. However, plastic can’t be digested and so when the plastic accumulates and blocks the digestive system, it kills the sea turtles.</p>
 
@@ -86,7 +88,7 @@
 
 				<p class="sides">Idea:</p>
 				
-				<p class="sides">In order to bring awareness to how dire the situation is for sea turtles apart from the plastic pollution in our ocean, I would like to propose a game to shed light on the dangers as a sea turtle. Since there are currently seven known species of turtles, the game would include at least seven different points of view of the turtles and how they live in their local habitat. In reality, there are several factors that prevent an egg from hatching or for the babies to reach adulthood and live its life. Therefore, the game would start as a roll the dice and chance game. If they roll a “1” for example, they will be able to hatch safely with a little blurb of the hardships that it survived. If they roll a “2”, maybe they were unfortunately hatched prematurely in the daytime and died of dehydration and would therefore need to roll again. As the game proceeds, there would be more games like spotting games to spot danger. If they fail and die they would have to start again like a shoot and ladder board game. This would be an interactive and educational game. After reaching a certain point since there are a total of 7 types of sea turtles, they would be able to get more turtles and collect them. The end goal is to live up to the full life expectancy of sea turtles.</p>
+				<p class="sides">In order to bring awareness to how dire the situation is for sea turtles apart from the plastic pollution in our ocean, I would like to propose a story with some interactions to shed light on the dangers sea turtles may face. In reality, there are several factors that prevent an egg from hatching or for the babies to reach adulthood and live its life. Therefore, the game would start with the egg. At a certain timed interval, there would be a mystery card. This mystery card would tell you if you are lucky enough to survive as an egg and hatch successully or not. If they dont hatch successfully, the card would read, "unfortunately you hatched prematurely in the daytime and died of dehydration. Please start over. As the game proceeds, there would be other mystery cards that tells you if you survived or not. The end goal is to live up to the full life expectancy of sea turtles. This story would mirror what sea turtles go through in their lifetime.</p></h3>
 
 
 	          </div>
