--- a/index.html
+++ b/index.html
@@ -53,15 +53,15 @@
 	      <div id="work" class="width-12-12-m width-12-12">
 	      	  <h3>Course Work</h3>
 	      	  <div id="work-holder" class="grid">
-	      	  	  <div class="width-12-12-m width-4-12 work-item">
-	            <a class="inner" href="portfolio-single.html" title="Project Title">
-	              <img title="sunflower" src="images/sunflower.jpg" />
-	              <div class="work-inside"><a href="project brief.html">
-	                <h2 id="project">Digital story</h2>
-	                <p><link rel="preconnect" href="https://fonts.googleapis.com">
-					<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-					<link href="https://fonts.googleapis.com/css2?family=Fira+Sans+Condensed:wght@200&display=swap" rel="stylesheet">Here is my project brief.</p>
-	            </div>
+	      	  	  
+
+	      	  <div class="width-12-12-m width-4-12 work-item">
+	            <a class="inner" href="project brief.html" title="Project Title">
+	              <img title="Project Title" src="images/sunflower.jpg" />
+	              <div class="work-inside">
+	                <h2>Digital Story</h2>
+	                <p>Here is my project brief.</p>
+	              </div>
 	            </a>
 	          </div>
 
