--- a/About.html
+++ b/About.html
@@ -49,13 +49,10 @@
 	          <div class="width-12-12-m width-12-12 page-item">
 
 	            <h3><a href="">About Me</a></h3>
-	            <p class="sides">Cras ac gravida neque. Nam euismod suscipit purus. Ut tortor mi, interdum eu vehicula at, congue non augue. Nulla facilisi. Fusce varius risus ut efficitur ornare. Sed non metus et ipsum scelerisque condimentum. Proin volutpat odio ipsum, sed luctus elit bibendum sed.</p>
+	            <p class="sides">My name is Cindy Liu and I am from New York City. I am currently a senior at Binghamton graduating May 2022. I am double majoring in Graphic design and French linguistics.</p>
 
-	           <p class="sides">Donec nec massa ullamcorper, faucibus nibh et, blandit erat. Nunc risus justo, fringilla nec dictum eu, laoreet vel mi. Aenean pretium sit amet est sed fringilla. Curabitur non ante molestie, commodo odio nec, tempus nulla. Fusce scelerisque neque dignissim magna molestie dictum. Nam ac enim at neque aliquam ullamcorper. Aliquam erat volutpat. Vestibulum vehicula quis nibh sed faucibus. Vestibulum felis neque, hendrerit quis semper id, porta vitae nisi. Donec velit metus, lacinia vitae viverra eu, ultrices non neque.</p>
+	           <p class="sides">My creativity is inspired by people’s stories and their lives. During my free time, I like to explore places with my friends by foot if possible.</p>
 
-	           <p class="sides">In rutrum, nisi sed eleifend venenatis, tellus est volutpat nulla, sed posuere quam velit non odio. Proin vel quam pulvinar nunc faucibus pulvinar sit amet sed lorem. Nullam maximus, ante non euismod iaculis, leo neque ultricies ligula, tristique sodales purus libero nec dolor. Donec volutpat metus vitae finibus laoreet. Donec ut eros non nisi efficitur gravida non at eros. Aliquam in neque aliquam, consequat sapien ac, luctus nisl. Curabitur lacinia ligula id aliquet ullamcorper. Aenean mattis ut massa sed auctor. Phasellus sit amet lectus maximus, malesuada est a, vestibulum libero. Proin dui sapien, congue vel varius eu, rhoncus in ligula.</p>
-
-	           <p class="sides">Sed eleifend quam non nisi elementum varius. Curabitur posuere sit amet ex vitae vehicula. Cras eleifend quam tempus fringilla finibus. Duis suscipit semper justo, quis scelerisque massa vestibulum quis. In imperdiet ornare nunc. Vestibulum at ligula eu sapien laoreet varius. Sed dapibus, purus maximus congue porttitor, arcu dolor tincidunt purus, eu vulputate leo lorem quis libero. Nunc tempor pellentesque auctor. Praesent pretium lorem ac ipsum elementum venenatis. Fusce vitae arcu pharetra, dignissim tortor quis, ornare lectus. Phasellus sed condimentum nunc. Suspendisse dapibus, orci vel sagittis ornare, risus elit gravida nunc, nec posuere dolor nulla accumsan est. </p>
 	          </div>
 
 	        </div>
