--- a/About.html
+++ b/About.html
@@ -53,8 +53,11 @@
 
 	           <p class="sides">My creativity is inspired by people’s stories and their lives. During my free time, I like to explore places with my friends by foot if possible.</p>
 
+ 				<img class="page-item" src="images/tattoo_end.png" />
 	          </div>
-
-	        </div>
-
+	      </div>
+	      <div id="footer" class="grid">
+	      <div class="width-12-12-m width-12-12">
+	      	
+	        <p id="footer">Copyright ©2022 · Cindy M. Liu</p>
 	      </div>
