--- a/About.html
+++ b/About.html
@@ -35,7 +35,7 @@
 	        			</a>
       			</div>
 						</li>
-						<li><a href="about.html">About Me</a></li>
+						<li><a href="About.html">About Me</a></li>
 					</ul>
 				</div>
 			</div>
@@ -58,6 +58,5 @@
 	      </div>
 	      <div id="footer" class="grid">
 	      <div class="width-12-12-m width-12-12">
-	      	
 	        <p id="footer">Copyright ©2022 · Cindy M. Liu</p>
 	      </div>
