--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 	        			</a>
       			</div>
 						</li>
-						<li><a href="about.html">About Me</a></li> 
+						<li><a href="About.html">About Me</a></li> 
 					</ul>
 				</div>
 			</div>
