--- a/project brief.html
+++ b/project brief.html
@@ -35,7 +35,7 @@
 	        			</a>
       			</div>
 						</li>
-						<li><a href="about.html">About Me</a></li> 
+						<li><a href="About.html">About Me</a></li> 
 					</ul>
 				</div>
 			</div>
