--- a/About.html
+++ b/About.html
@@ -53,7 +53,7 @@
 
 	           <p class="sides">My creativity is inspired by people’s stories and their lives. During my free time, I like to explore places with my friends by foot if possible.</p>
 
- 				<img class="page-item" src="images/tattoo_end.png" />
+ 				<img class="pic" src="images/tattoo_end.png" />
 	          </div>
 	      </div>
 	      <div id="footer" class="grid">
