--- a/index.html
+++ b/index.html
@@ -57,10 +57,10 @@
 
 	      	  <div class="width-12-12-m width-4-12 work-item">
 	            <a class="inner" href="project brief.html" title="Project Title">
-	              <img title="Project Title" src="images/sunflower.jpg" />
+	              <img src="images/kris-mikael-krister-aGihPIbrtVE-unsplash.jpg" />
 	              <div class="work-inside">
 	                <h2>Digital Story</h2>
-	                <p>Here is my project brief.</p>
+	                <p>Here is my project brief, story board, UI/UX model, and the digital story</p>
 	              </div>
 	            </a>
 	          </div>
@@ -70,7 +70,7 @@
 	              <img title="Project Title" src="images/sunflower.jpg" />
 	              <div class="work-inside">
 	                <h2>Project Title</h2>
-	                <p>Here is my project brief.</p>
+	                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras interdum posuere nisi.</p>
 	              </div>
 	            </a>
 	          </div>
