--- a/project brief.html
+++ b/project brief.html
@@ -39,6 +39,16 @@
 					</ul>
 				</div>
 			</div>
+				<div id="masthead" class="grid">
+				<div id="topnav" class="width-12-12 width-12-12-m">	
+					<ul>
+							<li><a href="project brief.html">PROJECT BRIEF</a></li>
+							<li><a href="storyboard.html">STORYBOARD</a></li>
+							<li><a href="storyboard.html">UI PRESENTATION</a></li>
+							<li><a href="storyboard.html">DIGITAL STORY</a></li>
+					</ul>
+      			</div>
+      		</div>
 			
 				<div id="main" class="grid">
 
@@ -90,9 +100,14 @@
 				
 				<p class="sides">In order to bring awareness to how dire the situation is for sea turtles apart from the plastic pollution in our ocean, I would like to propose a story with some interactions to shed light on the dangers sea turtles may face. In reality, there are several factors that prevent an egg from hatching or for the babies to reach adulthood and live its life. Therefore, the game would start with the egg. At a certain timed interval, there would be a mystery card. This mystery card would tell you if you are lucky enough to survive as an egg and hatch successully or not. If they dont hatch successfully, the card would read, "unfortunately you hatched prematurely in the daytime and died of dehydration. Please start over. As the game proceeds, there would be other mystery cards that tells you if you survived or not. The end goal is to live up to the full life expectancy of sea turtles. This story would mirror what sea turtles go through in their lifetime.</p></h3>
 
-
 	          </div>
 
 	        </div>
 
+<div id="footer" class="grid">
+	      <div class="width-12-12-m width-12-12">
+	        <p id="footer">Copyright ©2022 · Cindy M. Liu</p>
+	      </div>
+    </div>
+    
 	      </div>
