--- a/project brief.html
+++ b/project brief.html
@@ -18,7 +18,7 @@
 		<!--  Bookmark Icon-->
 		<link rel="icon" type="image/png" href="images/icon.png">
 		<!-- load google fonts -->
-		<link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:ital,wght@0,300;0,600;1,300;1,500&display=swap" rel="stylesheet">
+		<link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
 		<title>Cindy Liu : ARTS 486 Web Journal</title>
 	</head>
 
@@ -58,7 +58,7 @@
 
 	          <div class="width-12-12-m width-12-12 page-item">
 
-	            <h3><a href="">Proposal Brief: The world is your fishbowl: A game about the life of a sea turtle</a>
+	            <h3><a href="">Proposal Brief: The world is your fishbowl: A game about the life of a sea turtle</a></h3>
 
 	            <p class="sides">Research:</p><link rel="preconnect" href="https://fonts.googleapis.com">
 					<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
