--- a/About.html
+++ b/About.html
@@ -18,7 +18,7 @@
 		<!--  Bookmark Icon-->
 		<link rel="icon" type="image/png" href="images/icon.png">
 		<!-- load google fonts -->
-		<link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:ital,wght@0,300;0,600;1,300;1,500&display=swap" rel="stylesheet">
+		<link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
 		<title>Cindy Liu : ARTS 486 Web Journal</title>
 	</head>
 
