added the horizontal scroll

--- a/About.html
+++ b/About.html
@@ -48,7 +48,7 @@
 
 	          <div class="width-12-12-m width-12-12 page-item">
 
-	            <h3><a href="">About Me</a></h3>
+	            <h3>About Me</h3>
 	            <p class="sides">My name is Cindy Liu and I am from New York City. I am currently a senior at Binghamton graduating May 2022. I am double majoring in Graphic design and French linguistics.</p>
 
 	           <p class="sides">My creativity is inspired by people’s stories and their lives. During my free time, I like to explore places with my friends by foot if possible.</p>
