--- a/storyboard-h.html
+++ b/storyboard-h.html
@@ -59,20 +59,22 @@
 	          <div class="width-12-12-m width-12-12 page-item">
 
 	          	<h3>Storyboard: The world is your fishbowl: A game about the life of a sea turtle</h3>
+	          	<img title="Hatchling" src="images/hatching 1-01.png" width="72" height="72" /> 
 
-	          	  <div class="scrolling-wrapper">
-							    <div class="card"><h2>Card</h2></div>
-							    <div class="card"><h2>Card</h2></div>
-							    <div class="card"><h2>Card</h2></div>
-							    <div class="card"><h2>Card</h2></div>
-							    <div class="card"><h2>Card</h2></div>
-							    <div class="card"><h2>Card</h2></div>
-							    <div class="card"><h2>Card</h2></div>
-							    <div class="card"><h2>Card</h2></div>
-							    <div class="card"><h2>Card</h2></div>
-							  </div>
+	           <link rel="preconnect" href="https://fonts.googleapis.com">
+					<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+					<link href="https://fonts.googleapis.com/css2?family=Fira+Sans+Condensed:wght@200&display=swap" rel="stylesheet">
 
-
+	          	<div class="scrolling-wrapper">
+					<div class="card"><h2><img title="First scene" src="images/scene 1.png" /></h2></div>
+					<div class="card"><h2><img title="Second scene" src="images/scene 2.png" /></h2></div>
+					<div class="card"><h2><img title="Thrid scene" src="images/scene 3-01.png" /></h2></div>
+					<div class="card"><h2><img title="Fourth scene" src="images/scene 3.1-01.png" /></h2></div>
+					<div class="card"><h2><img title="Fifth scene" src="images/scene 3-01.png" /></h2></div>
+					<div class="card"><h2><img title="Sixth scene" src="images/scene 3.1-01.png" /></h2></div>
+					<div class="card"><h2><img title="Seventh scene" src="images/scene 1.1-01.png" /></h2></div>
+					
+				</div>
 	          </div>
 
 	        </div>
