added the UI presentation

--- a/project brief.html
+++ b/project brief.html
@@ -44,7 +44,7 @@
 					<ul>
 							<li><a href="project brief.html">PROJECT BRIEF</a></li>
 							<li><a href="storyboard.html">STORYBOARD</a></li>
-							<li><a href="storyboard.html">UI PRESENTATION</a></li>
+							<li><a href="UI presentation.html">UI PRESENTATION</a></li>
 							<li><a href="storyboard.html">DIGITAL STORY</a></li>
 					</ul>
       			</div>
@@ -58,7 +58,7 @@
 
 	          <div class="width-12-12-m width-12-12 page-item">
 
-	            <h3><a href="">Proposal Brief: The world is your fishbowl: A game about the life of a sea turtle</a></h3>
+	            <h3>Proposal Brief: The world is your fishbowl: A game about the life of a sea turtle</h3>
 
 	            <p class="sides">Research:</p><link rel="preconnect" href="https://fonts.googleapis.com">
 					<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
