--- a/storyboard.html
+++ b/storyboard.html
@@ -44,7 +44,7 @@
 					<ul>
 							<li><a href="project brief.html">PROJECT BRIEF</a></li>
 							<li><a href="storyboard.html">STORYBOARD</a></li>
-							<li><a href="storyboard.html">UI PRESENTATION</a></li>
+							<li><a href="UI presentation.html">UI PRESENTATION</a></li>
 							<li><a href="storyboard.html">DIGITAL STORY</a></li>
 					</ul>
       			</div>
